# REASSEMBLE

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_docker.txt  setup.py
.docker/: .env  Dockerfile  docker-compose.yml
3d_models/: cable_holder.STL
REASSEMBLE/: io.py
asl_libs/: OsEci.h  joint_limits.yaml
asl_libs/franka_reassemble/: README.md
asl_libs/franka_reassemble/franka_example_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml
catkin_reas/src/aidin_description/: CMakeLists.txt
catkin_reas/src/aidin_description/launch/: test.launch
catkin_reas/src/aidin_description/meshes/: AFTflangemount.stl  AFTsensor.stl
catkin_reas/src/aidin_description/sensor/: aidin_sensor.xacro  sensro.urdf
catkin_reas/src/aidin_ros/: CMakeLists.txt  README.md  package.xml
catkin_reas/src/aidin_ros/include/aidin_ros/: aidin_can_wrapper.h  aidin_ec_wrapper.h  can_utils.h
catkin_reas/src/aidin_ros/launch/: FT_AIDIN.launch  ft_calibrated.launch
catkin_reas/src/aidin_ros/meshes/: AFTflangemount_old.stl  AFThandmount_old.stl  AFTsensor_old.stl
catkin_reas/src/aidin_ros/scripts/: force_2_base.py  pub_fake_imu.py
catkin_reas/src/aidin_ros/sensor/: test.xacro
catkin_reas/src/aidin_ros/src/: aidin_can_ros_node.cpp  aidin_can_wrapper.cpp  aidin_ec_ros_node.cpp  aidin_ec_wrapper.cpp  can_utils.c
catkin_reas/src/asr_ros/: CMakeLists.txt  README.md  dependencies.txt  package.xml
catkin_reas/src/asr_ros/launch/: audio_process.launch  (+1 more)
catkin_reas/src/franka_reassemble/: README.md
catkin_reas/src/franka_reassemble/reassemble_control/: CMakeLists.txt  package.xml  reassemble_controller_plugins.xml
catkin_reas/src/franka_reassemble/reassemble_control/config/: default_combined_controllers.yaml  default_controllers.yaml  reassemble_control_node.yaml  start_pose2.yaml  start_pose3.yaml
catkin_reas/src/franka_reassemble/reassemble_control/include/reassemble_control/: reassemble_state_controller.h
catkin_reas/src/franka_reassemble/reassemble_control/launch/: franka_control.launch  reassemble_combined_control.launch  reassemble_control.launch
catkin_reas/src/franka_reassemble/reassemble_control/src/: reassemble_combined_control_node.cpp  reassemble_control_node.cpp  reassemble_state_controller.cpp
catkin_reas/src/franka_reassemble/reassemble_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml  package.xml  reassemble_controllers_plugin.xml
catkin_reas/src/franka_reassemble/reassemble_controllers/cfg/: compliance_param.cfg  desired_mass_param.cfg  dual_arm_compliance_param.cfg  teleop_gripper_param.cfg  teleop_param.cfg
catkin_reas/src/franka_reassemble/reassemble_controllers/config/: reassemble_controllers.yaml
catkin_reas/src/franka_reassemble/reassemble_controllers/include/franka_example_controllers/: cartesian_impedance_controller_damping_ratio.h
catkin_reas/src/franka_reassemble/reassemble_controllers/include/reassemble_controllers/: cartesian_impedance_controller_damping_ratio.h  cartesian_impedance_example_controller.h  nullspace_optim.h
catkin_reas/src/franka_reassemble/reassemble_controllers/launch/: cartesian_impedance_controller_damping_ratio.launch  cartesian_impedance_example_controller.launch  select_controller.launch
catkin_reas/src/franka_reassemble/reassemble_controllers/src/: cartesian_VIC_teleop.cpp  cartesian_impedance_controller_damping_ratio.cpp  cartesian_impedance_example_controller.cpp  cartesian_variable_impedance_controller_passive.cpp  cartesian_velocity_example_controller.cpp  teleop_gripper_node.cpp
catkin_reas/src/franka_reassemble/reassemble_description/: CMakeLists.txt  package.xml
catkin_reas/src/franka_reassemble/reassemble_description/robots/common/: franka_arm.xacro  franka_hand.xacro  franka_robot_FT.xacro  franka_robot_default.xacro  franka_robot_hotwire.xacro  hand.urdf.xacro  utils.xacro
catkin_reas/src/franka_reassemble/reassemble_description/robots/dual_panda/: dual_panda_example.urdf.xacro
catkin_reas/src/franka_reassemble/reassemble_description/robots/fr3/: fr3.urdf.xacro
catkin_reas/src/franka_reassemble/reassemble_description/robots/panda/: panda.urdf.xacro
catkin_reas/src/franka_reassemble/reassemble_ft_calib/: CMakeLists.txt  package.xml
catkin_reas/src/franka_reassemble/reassemble_ft_calib/config/: franka_ft_calib_params.yaml
catkin_reas/src/franka_reassemble/reassemble_ft_calib/launch/: franka_calib.launch  franka_ft_calib.launch
catkin_reas/src/franka_reassemble/reassemble_gazebo/: CMakeLists.txt  package.xml
catkin_reas/src/franka_reassemble/reassemble_gazebo/config/: sim_controllers_reassemble.yaml
catkin_reas/src/franka_reassemble/reassemble_gazebo/launch/: robot2.launch  sim2.launch
catkin_reas/src/franka_reassemble/reassemble_gazebo/scripts/: sim_time_cleanup.py
catkin_reas/src/franka_reassemble/reassemble_gazebo/world/: test_world.world
catkin_reas/src/franka_reassemble/reassemble_haptic/: CMakeLists.txt  README.md  package.xml
catkin_reas/src/franka_reassemble/reassemble_haptic/config/: HapticDeviceConfig.yaml
catkin_reas/src/franka_reassemble/reassemble_haptic/launch/: HapticDevice.launch  TeleopFranka.launch  USBCamBringup.launch
catkin_reas/src/franka_reassemble/reassemble_haptic/scripts/: saveBag2NPZ.py  setup_camera.sh  teleop_franka.py
catkin_reas/src/franka_reassemble/reassemble_haptic/src/: HapticDevice.cpp  OneEuroFilter.cpp
catkin_ws/src/aidin_description/: package.xml
catkin_ws/src/haptic_ros/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/haptic_ros/launch/: HapticDevice.launch  TeleopFranka.launch  USBCamBringup.launch
catkin_ws/src/haptic_ros/scripts/: saveBag2NPZ.py
catkin_ws/src/haptic_ros/src/: HapticDevice.cpp  OneEuroFilter.cpp
catkin_ws/src/haptic_ros/src/old/: HapticDevice_v1.cpp
scripts/conversions/: h5_to_rlds.py
scripts/labeling/: check_high_level.py  check_low_level.py
scripts/setup/: setup_gpu.sh
scripts/statistics/: statistics.py  stats_high_level.py
scripts/visualization/: plot_sankey.py  vizualize_data.py
(+15 files in other folders)
