<?xml version="1.0"?>
<package format="2">
  <name>aidin_ros</name>
  <version>0.0.0</version>
  <description>The aidin_ros package</description>
  <maintainer email="johannes.heidersberger@tuwien.ac.at">Johannes Heidersberger</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>soem</build_depend>
  <build_depend>ethercat_grant</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>xmlrpcpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>soem</exec_depend>
  <exec_depend>ethercat_grant</exec_depend>
  <exec_depend>xmlrpcpp</exec_depend>
</package>
