<?xml version="1.0"?>
<package format="2">
  <name>reassemble_control</name>
  <version>0.10.1</version>
  <description>This package is an extension of the franka_ros repository. It provides a hardware node to control a Franka Robotics research robot</description>
  <license>Apache 2.0</license>

  <author email="daniel.sliwowski@tuwien.ac.at">Daniel Sliwowski</author>
  <maintainer email="daniel.sliwowski@tuwien.ac.at">Daniel Sliwowski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libfranka</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf</depend>
  <depend>std_srvs</depend>

  <exec_depend>reassemble_description</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/reassemble_controller_plugins.xml"/>
  </export>
</package>
