<?xml version="1.0"?>
<package format="2">
  <name>reassemble_controllers</name>
  <version>0.10.1</version>
  <description>rThis package is an extension of the franka_ros repository that provides example code for controlling Franka Emika research robots with ros_control</description>
  <license>MIT</license>

  <author email="daniel.sliwowski@tuwien.ac.at">Daniel Sliwowski</author>
  <maintainer email="daniel.sliwowski@tuwien.ac.at">Daniel Sliwowski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  <depend>franka_example_controllers</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>reassemble_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/reassemble_controllers_plugin.xml" />
  </export>
</package>
