<?xml version="1.0"?>
<package format="2">
  <name>reassemble_description</name>
  <version>0.10.1</version>
  <description>This package is an extension of the franka_ros repository that contains URDF files and meshes of Franka Emika robots</description>
  <license>MIT</license>

  <author email="daniel.sliwowski@tuwien.ac.at">Daniel Sliwowski</author>
  <maintainer email="daniel.sliwowski@tuwien.ac.at">Daniel Sliwowski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <test_depend>rosunit</test_depend>
</package>
